overflow issues solved

--- a/src/app/my-projects/my-projects.component.scss
+++ b/src/app/my-projects/my-projects.component.scss
@@ -52,12 +52,12 @@ section {
 
 @keyframes slideInFromRight {
   from {
-    transform: translateX(100%);
+    transform: translateY(100%);
     opacity: 0;
   }
 
   to {
-    transform: translateX(0);
+    transform: translateY(0);
     opacity: 1;
   }
 }
@@ -72,7 +72,8 @@ app-project {
   }
 
   &.animate {
-    animation: slideInFromRight 0.7s ease-in-out;
+    animation: slideInFromRight 1s ease-in-out;
+    overflow: hidden !important;
   }
 }
 
