--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,6 +28,7 @@ $secondary_light_blue: #1F262B;
 }
 
 body {
+    overflow-x: hidden;
     background-color: $primary_dark_grey;
 }
 
